--- a/app/src/main/res/layout/fragment_fragment_window.xml
+++ b/app/src/main/res/layout/fragment_fragment_window.xml
@@ -7,27 +7,45 @@
     android:background="@color/colorPrimaryDark"
     tools:context=".FragmentWindow">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+
     <TextView
         android:id="@+id/entrance"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ALL WINDOW"
-        android:textColor="#FFFFFF"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:paddingStart="15dp"
+        android:layout_height="match_parent"
+        android:paddingStart="10dp"
+        android:textSize="10dp"
+        android:gravity="center"
+        android:text="ALLARM"
         android:layout_centerVertical="true"
-        />
+        android:textColor="#FFFFFF" />
 
-    <Switch
-        android:id="@+id/switch1"
-        style="@style/SwitchWindowStyle"
-        android:theme="@style/SwitchWindowTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:padding="15dp"
-        android:layout_centerVertical="true"
-        />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp">
+
+            <ImageButton
+                android:id="@+id/btnEntrance"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:scaleX="0.7"
+                android:scaleY="0.2"
+                android:background="@drawable/windowbutton"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
